# bumpbot

./: .gitignore  .todo.txt  README.md  config.json  pyproject.toml  thread_schedule.json
.github/workflows/: main.yml
bot/: __main__.py  bot.py
bot/exts/: bumping.py  threads.py
bot/utils/: converters.py  help.py  views.py
src/: main.py
src/exts/: bumping.py  threads.py
src/utils/: converters.py  help.py
